objects/TestAR__c.object
<CustomObject>
    <description>Test Email Functionality</description>
    <fields>
        <fullName>Test3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test5__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test2</label>
        <type>Checkbox</type>
    </fields>
    <label>TestAR</label>
    <nameField>
        <label>TestAR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestARs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>